--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
     font-family: 'Poppins';
     src: url(/Poppins/Poppins-Regular.ttf);
 }
+
 :root {
     --colored: #5231bc;
     --secondary-bg: #f0f1f6;
@@ -10,9 +11,59 @@
     --red-color: red;
     --green-color: green;
 }
+
 body {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
     font-family: 'Poppins', 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    background-color: var(--secondary-bg);
+}
+
+.sidebar-container-et-searchbar-container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+}
+
+.sidebar {
+    width: 15%;
+    height: 100vh;
+    background-color: var(--colored);
+}
+
+.searchbar {
+    width: 100%;
+    height: 10vh;
+    background-color: var(--colored);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    gap: 50em;
+}
+
+.searchbar .search {
+    width: 20%;
+    padding: 0px;
+    color: gray;
+    background-color: var(--white-color);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    border-radius: 20px;
+}
+
+.searchbar .search i {
+    color: rgb(0, 0, 0);
+    padding-left: 25px;
+}
+
+.searchbar .search input {
+    width: 80%;
+    height: 5vh;
+    border: none;
+    outline: none;
+    border-radius: 20px;
 }
