--- a/css/style.css
+++ b/css/style.css
@@ -20,22 +20,25 @@ body {
     background-color: var(--secondary-bg);
 }
 
+/* SEARCH BAR CONTAINER AND SIDEBAR CONTAINER */
 .sidebar-container-et-searchbar-container {
     width: 100%;
     height: 100%;
     display: flex;
 }
 
+/* SIDEBAR CONTAINER */
 .sidebar {
     width: 15%;
     height: 100vh;
     background-color: var(--colored);
 }
 
+/* SEACRH BAR CONTAINER */
 .searchbar {
     width: 100%;
     height: 10vh;
-    background-color: var(--colored);
+    background-color: var(--secondary-bg);
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -43,6 +46,7 @@ body {
     gap: 50em;
 }
 
+/* SEARCH CONTAINER */
 .searchbar .search {
     width: 20%;
     padding: 0px;
@@ -55,15 +59,45 @@ body {
     border-radius: 20px;
 }
 
+/* STYLING I TAG INSIDE SEARCH CONTAINER */
 .searchbar .search i {
     color: rgb(0, 0, 0);
     padding-left: 25px;
+    font-size: 1.2rem;
 }
 
+/* STYLING INPUT TAG INSIDE SEARCH CONTAINER */
 .searchbar .search input {
     width: 80%;
     height: 5vh;
     border: none;
     outline: none;
     border-radius: 20px;
+}
+
+/* NOTIFICATION CONTAINER */
+.searchbar .notification {
+    text-decoration: none;
+    padding: 15px 26px;
+    position: relative;
+    display: inline-block;
+    border-radius: 2px;
+}
+
+.searchbar .notification i {
+    font-size: 1.2rem;
+}
+
+.searchbar .notification .badge {
+    position: absolute;
+    top: -1px;
+    left: 2em;
+    border-radius: 50%;
+    background: var(--colored);
+    height: 25px;
+    width: 25px;
+    display: inline-block;
+    text-align: center;
+    line-height: 25px;
+    color: white;
 }
