--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Poppins';
-    src: url(/Poppins/Poppins-Regular.ttf);
+    src: url(/assets/Poppins/Poppins-Regular.ttf);
 }
 
 :root {
@@ -10,6 +10,8 @@
     --black-color: #000;
     --red-color: red;
     --green-color: green;
+    --colored-ext: #492ba7;
+    --font-type: 'Poppins';
 }
 
 body {
@@ -25,17 +27,13 @@ body {
     width: 100%; height: 100%; display: flex;
 }
 
-/* SIDEBAR CONTAINER */
-.sidebar {
-    width: 15%; height: 100vh; background-color: var(--colored);
-}
-
 /* SEACRH BAR CONTAINER */
 .searchbar {
     width: 100%; height: 10vh; display: flex;
     flex-direction: row; align-items: center; gap: 50em;
     background-color: var(--secondary-bg);
-    justify-content: space-around;
+    justify-content: space-around; position: relative;
+    box-shadow: 0px 2px 2px 0px rgba(3, 3, 3, 0.199);
 }
 
 /* SEARCH CONTAINER */
