--- a/css/style.css
+++ b/css/style.css
@@ -19,19 +19,23 @@ body {
     margin: 0;
     box-sizing: border-box;
     font-family: 'Poppins', 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background-color: var(--secondary-bg);
+    background-color: var(--secondary-bg); display: flex; flex-direction: row;
 }
 
 /* SEARCH BAR CONTAINER AND SIDEBAR CONTAINER */
-.sidebar-container-et-searchbar-container {
+/* .sidebar-container-et-searchbar-container {
     width: 100%; height: 100%; display: flex;
+} */
+/* STYLING THE MAIN DIV */
+.main {
+    width: 100%;
+    height: 100%;
 }
-
 /* SEACRH BAR CONTAINER */
 .searchbar {
     width: 100%; height: 10vh; display: flex;
     flex-direction: row; align-items: center; gap: 50em;
-    background-color: var(--secondary-bg);
+    background-color: var(--secondary-bg);position: relative;
     justify-content: space-around; position: relative;
     box-shadow: 0px 2px 2px 0px rgba(3, 3, 3, 0.199);
 }
