--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -10,6 +10,7 @@
 }
 body {
     display: flex; flex-direction: row;
+    padding: 0; margin: 0; box-sizing: border-box;
 }
 
 :root {
@@ -26,7 +27,7 @@ body {
 /* SIDEBAR CONTAINER */
 .sidebar {
     width: 25%;
-    height: 100vh;
+    height: 100%;
     background-color: var(--colored);
     display: flex;
     flex-direction: column;
