--- a/css/charts.css
+++ b/css/charts.css
@@ -149,3 +149,130 @@ body {
     outline: none;
     margin-right: 10px;
 }
+
+@media only screen and (max-width: 768px) {
+    .charts {
+      width: 100%;
+    }
+  
+    .charts h1 {
+      font-size: 1em;
+    }
+  
+    .chartbox {
+      margin-top: 0;
+      width: 100%;
+      height: 100vh;
+      display: flex;
+      gap: 10px;
+      flex-direction: column;
+    }
+  
+    .chartbox .col {
+      width: 100%;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+    }
+  
+    .chartbox .extralarge {
+      display: none;
+    }
+  
+    .chartbox .col .box {
+      width: 100%;
+      background-color: var(--white-color);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: row;
+      gap: 0;
+    }
+  
+    .chartbox .col .bx {
+      border-left: none;
+    }
+  
+    .col .box .icons {
+      padding: 0;
+      font-size: 1.5rem;
+      border-radius: 0;
+      background-color: transparent;
+      color: var(--colored);
+    }
+  
+    .col .box .txt span {
+      font-size: .8rem;
+    }
+  
+    .chartbox .extralarge .box-xlarge {
+      width: 100%;
+      height: 100%;
+      background-color: var(--white-color);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+  
+    .box-large::-webkit-scrollbar {
+      width: 0;
+      height: 0;
+    }
+  
+    .box-large::-webkit-scrollbar-thumb {
+      display: none;
+    }
+  
+    .chartbox .extralarge .box-large {
+      height: 100%;
+      width: 100%;
+      background-color: var(--white-color);
+      overflow: scroll;
+    }
+  
+    .box-large h3 {
+      padding: 0;
+    }
+  
+    .box-large .campaign-request {
+      border-bottom: none;
+      margin-top: 0;
+      padding: 10px 0;
+    }
+  
+    .box-large .campaign-request img {
+      width: 35px;
+      height: 35px;
+      border-radius: 7px;
+      object-fit: cover;
+      object-position: center;
+    }
+  
+    .campaign-request .approve-box {
+      margin-left: 0;
+    }
+  
+    .campaign-request .approve-box p {
+      line-height: 1.2;
+      font-size: .8rem;
+      padding: 0 0 5px 0;
+    }
+  
+    .campaign-request .approve-box button {
+      padding: 3px 10px;
+      border-radius: 7px;
+    }
+  }
+  
+  /* @media only screen and (min-width: 769px) and (max-width: 1024px) {
+    .chartbox .extralarge {
+      width: 50%;
+    }
+  }
+  
+  @media only screen and (min-width: 1025px) {
+    .chartbox .extralarge {
+      width: 33.33%;
+    }
+  } */
+  
