--- a/css/charts.css
+++ b/css/charts.css
@@ -89,7 +89,7 @@ body {
     width: 66%;
     background-color: var(--white-color);
     display: flex;
-    align-items: ;
+    align-items: center;
     justify-content: center;
 }
 
