--- a/css/searchbar.css
+++ b/css/searchbar.css
@@ -26,7 +26,7 @@ body {
 /* SEARCH BAR CONTAINER AND SIDEBAR CONTAINER */
 /* STYLING THE MAIN DIV */
 .main {
-    width: 100%; height: 100%; background-color:
+    width: 100%; height: 100%;
 }
 /* SEACRH BAR CONTAINER */
 .searchbar {
