--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -115,6 +115,7 @@ i {
     display: flex;
     align-items: center;
     list-style: none;
+    transition: all 1s;
 }
 
 .sidebar .links li:hover {
@@ -122,7 +123,7 @@ i {
     border-left: 8px solid #1a0366;
 }
 .sidebar .links li, .sidebar .links li a {
-    transition: all 0.3s ease-in-out;
+    transition: all 0.3s;
   }
 
 .sidebar .links li a {
@@ -130,8 +131,11 @@ i {
     color: var(--white-color);
     font-size: 1.1rem;
     padding: 1em;
+    transition: all 1s;
 }
-
+.sidebar .links li a:hover {
+transform: translateX(4px);
+}
 .sidebar .links li a i {
     padding: 0 10px 0 0;
     font-size: 1rem;
