--- a/css/mediaquery.css
+++ b/css/mediaquery.css
@@ -48,9 +48,20 @@
  @media screen and (max-width: 940px) {
    .chartbox .col {
     flex-wrap: wrap;
+   }
+   .chartbox .extralarge {
+    flex-wrap:wrap ;
    } 
    .chartbox .col .box {
     width: 100%;
     gap: 50px;
+   }
+   .chartbox .extralarge .box-xlarge {
+    width: 100%;
+    height: 30vh;
+   }
+   .chartbox .extralarge .box-large {
+    width: 100%;
+    height: 20vh;
    }
  }
