--- a/css/mediaquery.css
+++ b/css/mediaquery.css
@@ -3,7 +3,8 @@
 @media screen and (max-width: 1013px) {
    .searchbar {
     gap: 10em;
-   }
+    padding: 40px;
+}
    .searchbar .search {
     width: 40%;
    }
@@ -12,6 +13,7 @@
     .searchbar {
      gap: 20em;
      justify-content: center;
+     padding: 40px;
     }
     .searchbar .search {
         width: 40%;
@@ -21,14 +23,14 @@
         .searchbar {
             gap: 20em;
             justify-content: center;
-            padding: 0 40px;
+            padding: 40px;
            }  
     }
  @media screen and (max-width: 623px) {
     .searchbar {
      gap: 10em;
      justify-content: center;
-     padding: 0 40px;
+     padding: 40px;
     }
     .searchbar .search {
         width: 100%;
@@ -40,6 +42,8 @@
     }
     .searchbar {
         justify-content: flex-end;
+        padding: 40px;
+
 
     }
  }
