--- a/css/searchbar.css
+++ b/css/searchbar.css
@@ -30,7 +30,7 @@ body {
 }
 /* SEACRH BAR CONTAINER */
 .searchbar {
-    width: 100%; height: 5vh; display: flex; padding-top: 15px;
+    width: 100%; height: 5vh; display: flex; padding: 40px;
     flex-direction: row; align-items: center;
     background-color: var(--secondary-bg);position: relative;
     justify-content: space-around; position: relative; gap: 45em;
