added responsiveness to the sidebar, also added toggle button, to toggle in and out the side bar

--- a/css/mediaquery.css
+++ b/css/mediaquery.css
@@ -69,3 +69,26 @@
     height: 20vh;
    }
  }
+
+
+ /* MEDIA QUERY FOR SIDEBAR */
+ @media screen and (max-width: 850px) {
+    .sidebar {
+        display: none;
+    }
+    .menu {
+        display: block;
+    }
+    .sidebar .logo span {
+        font-size: 1.3rem;
+    }
+    .sidebar .links li .sidebarlink {
+        font-size: 1rem;
+    }
+    .sidebar .links li .sidebarlink .userdrop {
+        display: none;
+    }
+   .sidebar .profile .profile-description span {
+    font-size: 1rem;
+   }
+ }
