--- a/css/charts.css
+++ b/css/charts.css
@@ -9,9 +9,7 @@ body {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    overflow-y: scroll;
 }
-
 :root {
     --colored: #5231bc;
     --secondary-bg: #f0f1f6;
@@ -26,10 +24,11 @@ body {
 .charts {
     margin: 0 auto;
     width: 90%;
+    overflow-y: scroll;
 }
 
-.charts h1 {
-    padding-top: 20px;
+.main h1 {
+    padding: 10px 0 0 4vw;
     font-size: 1.5em;
 }
 
@@ -41,7 +40,6 @@ body {
     gap: 10px;
     flex-direction: column;
 }
-
 .chartbox .col {
     width: 100%;
     height: 18vh;
@@ -113,6 +111,7 @@ body {
     background-color: var(--white-color);
     overflow-y: scroll;
 }
+
 .box-large h3 {
     padding: 10px;
 }
