--- a/css/searchbar.css
+++ b/css/searchbar.css
@@ -26,7 +26,7 @@ body {
 /* SEARCH BAR CONTAINER AND SIDEBAR CONTAINER */
 /* STYLING THE MAIN DIV */
 .main {
-    width: 100%; height: 100%;
+    width: 100%; height: 100%; background-color: var(--secondary-bg);
 }
 /* SEACRH BAR CONTAINER */
 .searchbar {
@@ -34,7 +34,7 @@ body {
     flex-direction: row; align-items: center;
     background-color: var(--secondary-bg);position: relative;
     justify-content: space-around; position: relative; gap: 45em;
-    /* box-shadow: 0px 2px 2px 0px rgba(3, 3, 3, 0.199); */
+    box-shadow: 0px 2px 2px 0px rgba(3, 3, 3, 0.199);
 }
 
 /* SEARCH CONTAINER */
