still on responsiveness

--- a/css/mediaquery.css
+++ b/css/mediaquery.css
@@ -78,6 +78,13 @@
     margin-top: 8vw;
 
    }
+   @media screen and (max-width: 720px) {
+    .chartbox .col .box-4 {
+       margin-top: 25vw;
+   }
+   .chartbox .extralarge {
+    margin-top: 0vw;
+   }
  }
 
 
