--- a/css/searchbar.css
+++ b/css/searchbar.css
@@ -20,21 +20,18 @@
 }
 body {
     font-family: 'Poppins', 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background-color: var(--secondary-bg); display: flex; flex-direction: row;
+    background-color: var(--secondary-bg); display: flex; flex-direction: row; overflow: visible;
 }
 
 /* SEARCH BAR CONTAINER AND SIDEBAR CONTAINER */
 /* STYLING THE MAIN DIV */
 .main {
-    width: 100%; height: 100%; background-color: var(--secondary-bg);
+margin-left: 20%; width: calc(100% - 20%); height: 100%; background-color: var(--secondary-bg);
 }
 /* SEACRH BAR CONTAINER */
 .searchbar {
     width: 100%; height: 5vh; display: flex; padding: 40px;
-    flex-direction: row; align-items: center;
-    background-color: var(--secondary-bg);position: relative;
-    justify-content: space-around; position: relative; gap: 45em;
-    box-shadow: 0px 2px 2px 0px rgba(3, 3, 3, 0.199);
+    flex-direction: row; align-items: center; left: calc(100% - 20%); background-color: var(--secondary-bg); justify-content: space-around; box-shadow: 0px 2px 2px 0px rgba(3, 3, 3, 0.199); gap: 50rem;
 }
 
 /* SEARCH CONTAINER */
@@ -66,7 +63,7 @@ body {
 }
 
 .searchbar .notification .badge {
-    position: absolute; top: -1px; left: 2em;
+    position: absolute; top: -1px; left: 2em; padding: 0px 0 0 2px;
     border-radius: 50%; background: var(--colored);
     height: 25px; width: 25px; display: inline-block;
     text-align: center; line-height: 25px; color: white;
