added margin top to b0x-4 chartbox

--- a/css/mediaquery.css
+++ b/css/mediaquery.css
@@ -76,8 +76,8 @@
    }
 }
    @media screen and (max-width: 720px) {
-    .chartbox .col .box-4 {
-       margin-top: 25vw;
+   .chartbox .col .box-4 {
+    margin-top: 14em;
    }
    .chartbox .extralarge {
     margin-top: 0vw;
